syntax = "proto3";

package proto;

option go_package = "app/proto";

message Book {
	string author = 1;
	string name = 2;
	float price = 3;
	string genre = 4;
	string cover = 5;
	int32 page = 6;	
}

message BookMainInformation {
	int32 id = 1;
	string author = 2;
	string name = 3;
	float price = 4;
}

message CreateRequest {
	Book book = 1;
}

message GetBooksRequest {
	string key = 1;
}

message WorkOnlyIdRequest {
	int32 id = 1;
}

message DiscountRequest {
	int32 id = 1;
	int32 percent = 2;
}

message SearchRequest {
	string key = 1;
}

message MainResponse {
	BookMainInformation book = 1;
}

message GetByIdResponse {
	Book book = 1;
}

message ManyResponse {
	repeated BookMainInformation books = 1;
}

service BookProfiles {
	rpc Create(CreateRequest) returns (MainResponse){}
	rpc Get(GetBooksRequest) returns (ManyResponse){}
	rpc GetById(WorkOnlyIdRequest) returns (GetByIdResponse){}
	rpc Discount(DiscountRequest) returns (MainResponse){}
	rpc Delete(WorkOnlyIdRequest) returns (MainResponse){}
	rpc Search(SearchRequest) returns (ManyResponse){}
}